[package]
name = "towboot"
version = "0.4.0"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.16", features = ["alloc", "logger", "exts"] }
uefi-services = "0.13"
rsdp = { git = "https://github.com/YtvwlD/acpi.git", branch = "rsdp" }
smbios-lib = { git = "https://github.com/alesharik/smbios-lib.git", branch = "master", default-features = false, features = ["no_std"] }

log = { version = "0.4", default-features = false }

toml = { git = "https://github.com/thomcc/toml-rs.git", branch = "nostd", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
# libm = "0.2"

multiboot12 = { git = "https://github.com/YtvwlD/multiboot12", tag = "towboot-0.5.0" }
goblin = { version = "0.5", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
scroll = { version = "0.11", default-features = false }
miniarg = { version = "0.3", default-features = false, features = ["alloc", "derive"] }

[build-dependencies]
built = { version = "0.5", features = ["git2"] }