[package]
name = "towboot"
version = "0.6.1"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.24", features = ["alloc", "global_allocator", "logger"] }
uefi-services = "0.21"
acpi = "5.0"
smbios-lib = { git = "https://github.com/hhuOS/smbios-lib.git", branch = "main", default-features = false, features = ["no_std"] }
x86 =  "0.52"

log = { version = "0.4", default-features = false }

toml = { git = "https://github.com/thomcc/toml-rs.git", branch = "nostd", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
# libm = "0.2"

multiboot12 = { git = "https://github.com/YtvwlD/multiboot12", tag = "towboot-0.6.0" }
goblin = { version = "0.7", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
scroll = { version = "0.11", default-features = false }
miniarg = { version = "0.3", default-features = false, features = ["alloc", "derive"] }

[build-dependencies]
built = { version = "0.6", features = ["git2"] }
