[workspace]
resolver = "2"
members = [
    "towboot",
    "towboot_ia32",
    "towboot_x64",
    "xtask",
    "towboot_config",
    "towbootctl",
    "tests",
]

[workspace.package]
# these apply to all crates
version = "0.7.1"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
license = "MPL-2.0"
repository = "https://github.com/hhuOS/towboot"
