cargo-features = ["per-package-target"]

[package]
name = "towboot"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2024"
default-target = "i686-unknown-uefi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.35", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
acpi = { version = "5.0", default-features = false }
smbios-lib = { git = "https://github.com/hhuOS/smbios-lib.git", branch = "main", default-features = false, features = ["no_std"] }
x86 =  "0.52"

log = { version = "0.4", default-features = false }

# tomling is a nice and no_std toml parser, but sadly it fails on our modules :/
toml = { git = "https://github.com/thomcc/toml-rs.git", branch = "nostd", default-features = false }
multiboot12 = { git = "https://github.com/YtvwlD/multiboot12", tag = "towboot-0.9.1" }
goblin = { version = "0.9", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
scroll = { version = "0.12", default-features = false }

towboot_config = { path = "../towboot_config" }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
