[package]
name = "towboot_config"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["options"]
options = ["miniarg"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
miniarg = { version = "0.3", default-features = false, features = ["alloc", "derive"], optional = true }
