[package]
name = "towboot_config"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["options"]
options = ["miniarg"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
log = "0.4.4"
miniarg = { version = "0.3", default-features = false, features = ["alloc", "derive"], optional = true }
