[package]
name = "towbootctl"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gpt = "3.1"
fscommon = "0.1"
fatfs = "0.3"
log = "0.4.4"
tempfile = "3.8"
toml = "0.5" # can't upgrade further as long as towboot depends on 0.4

towboot_config = { path = "../towboot_config" }

# these dependencies are only for the binary
argh = { version = "0.1", optional = true }
env_logger = { version = "0.10", default-features = false, features = ["auto-color"], optional = true }

[features]
binary = ["argh", "env_logger"]

[[bin]]
name = "towbootctl"
required-features = ["binary"]

