[package]
name = "towbootctl"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cached-path = "0.6"
directories = "5.0"
gpt = { version = "4.0", features = ["log"] }
fscommon = "0.1"
fatfs = "0.3"
log = "0.4.4"
tempfile = "3.8"
toml = "0.5" # can't upgrade further as long as towboot depends on 0.4

towboot_config = { path = "../towboot_config" }

# these dependencies are only for the binary
argh = { version = "0.1", optional = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"], optional = true }
towboot_ia32 = { path = "../towboot_ia32", optional = true }
towboot_x64 = { path = "../towboot_x64", optional = true }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

[features]
args = ["argh"]
binary = ["args", "env_logger", "towboot_ia32", "towboot_x64"]

[[bin]]
name = "towbootctl"
required-features = ["binary"]

