[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
strum = { version = "0.25", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
anyhow = "1.0"
thiserror = "1.0"
fatfs = "0.3"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
miniarg = { version = "0.3", features = ["alloc", "derive"] }
tempfile = "3.8"
