[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.5" # can't upgrade further as long as towboot depends on 0.4

towboot_config = { path = "../towboot_config" }
towbootctl = { path = "../towbootctl" }
