[package]
name = "xtask"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
anyhow = "1.0"
thiserror = "1.0"

towbootctl = { path = "../towbootctl" }
